--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html lang="ja prefix="og: サイトURL#">
+<html lang="ja prefix="og: https://sushikoba.github.io/Salon-de-beaute-02/#navStyle">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salon de beaute | 葛飾区あなたのためのサロン</title>
+    <title></title>
     <meta name="description" content="" />
      <!--ここからOGP-->
-     <meta property="og:url" content=" ページの URL" />
-     <meta property="og:type" content=" ページの種類" />
+     <meta property="og:url" content="https://sushikoba.github.io/Salon-de-beaute-02/#navStyle" />
+     <meta property="og:type" content="website" />
      <!--website /blog 下層→article-->
-     <meta property="og:title" content=" ページの タイトル" />
-     <meta property="og:description" content=" ページのディスクリプション" />
-     <meta property="og:site_name" content="サイト名" />
-     <meta property="og:image" content=" サムネイル画像の URL" />
+     <meta property="og:title" content="Salon de beaute | 葛飾区あなたのためのサロン " />
+     <meta property="og:description" content="Salon de beauteは東京の下町にある美容室です。
+     夫婦で営んでおり、地元のお客様に寄り添ったお店でありたいと思っています。
+     お客様と生涯に渡ってお付き合いができる。そんな存在を目指して日々お客様と接しています。" />
+     <meta property="og:site_name" content="Salon de beaute" />
+     <meta property="og:image" content="./img/menu-photo.jpg" />
      <!--//OGPここまで-->
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
